# csad25407VashchyshynIhor3

./: CMakeLists.txt  ci.bat  ci.sh
.github/workflows/: ci.yml
spi_src/: spi_master_rx.vhd  spi_master_tx.vhd  testbench.vhd
tests/: unit_tests.cpp
